# TinyLib

./: .gitignore  CMakeLists.txt  README.md  makefile
include/tinylib/: common.h  dyn_arr.h
test/: test_dyn_arr.c
